# Ramz

./: .gitignore  CLAUDE.md  README.md  Ramz.jsx  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(tabs)/: _layout.tsx  apikeys.tsx  history.tsx  identity.tsx  scanner.tsx  vault.tsx
apps/mobile/lib/: storage.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Shell.tsx
apps/web/components/modules/: ApiKeysModule.tsx  ExtensionModule.tsx  HistoryModule.tsx  IdentityModule.tsx  ScannerModule.tsx  VaultModule.tsx
apps/web/components/ui/: Icons.tsx
apps/web/lib/: storage.ts
docs/: ARCHITECTURE.md  SECURITY.md
