[package]
name    = "ramz"
version = "1.0.0"
edition = "2021"

[lib]
name          = "ramz_lib"
crate-type    = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ramz"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
